# kinbody_detector

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
data/tags/: .apriltag_blank.dae.swp  apriltag_blank.dae  apriltag_blank.kinbody.xml
scripts/: tag_kinbody.py
src/kinbody_detector/: apriltag_kinbody.py  kinbody_detector.py  optimizing_kinbody_detector.py  tag_kinbody.py
