<?xml version="1.0"?>
<package format="2">
  <name>kinbody_detector</name>
  <version>0.1.0</version>
  <description>
    The kinbody_detector package provides a way to convert ROS MarkerArray
    data into openrave kinbodies.
  </description>
  <url type="repository">https://github.com/personalrobotics/kinbody_detector</url>
  <maintainer email="awalsman@cs.cmu.edu">Aaron Walsman</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <exec_depend>prpy</exec_depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <depend>openrave_catkin</depend>
</package>
